# SIREN

./: LICENSE  README.md  pyproject.toml
explore_inr/: explore_siren.ipynb  train3d.py
